--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,6 +7,12 @@
     background: white;
     box-shadow: 2px 2px 50px rgb(204, 204, 204);
     overflow: scroll;
+    transform: translatex(-100%);
+    transition: all 0.5s ease;
+    opacity: 0;
+    h2{
+        padding: 2rem;
+    }
 }
 
 .library-song{
@@ -53,4 +59,9 @@
 
   .selected{
       background: rgb(165, 181, 228) ;
+  }
+
+  .active-library{
+      transform: translatex(0%);
+      opacity: 1;
   }
