--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -42,6 +42,12 @@ input[type='range']::-webkit-slider-thumb{
     height: 16px;
     width: 16px;
 }
+input[type='range']::-moz-range-thumb{
+    -webkit-appearance: none;
+    background: transparent;
+    border: none;
+}
+
 
 
 .track{
@@ -62,4 +68,14 @@ input[type='range']::-webkit-slider-thumb{
     left: 0;
     transform: translateX(0%);
     pointer-events: none;
+}
+
+
+@media screen and (max-width:768px){
+     .time-control{
+         width: 90%;
+     }
+     .play-control{
+         width: 60%;
+     }
 }
