--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,6 +13,15 @@ h3,h4{
     font-weight: 400;
     color: rgb(100, 100, 100);
 }
+
+.App{
+transition: all 0.5s ease;
+}
+.library-active{
+    margin-left: 25%;
+}
+
+
 @import './player';
 @import './song';
 @import './library';
